--- a/extension-chrome/manifest.json
+++ b/extension-chrome/manifest.json
@@ -3,23 +3,20 @@
   "name": "Recipe Transformer",
   "version": "1.0.0",
   "description": "Convert recipe websites to clean JSON-LD with metric units for Mealie",
-  
   "permissions": [
     "activeTab",
+    "tabs",
     "storage",
     "notifications",
     "downloads"
   ],
-  
   "host_permissions": [
     "https://*/*",
     "http://*/*"
   ],
-  
   "background": {
     "service_worker": "background-v3.js"
   },
-  
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -27,28 +24,13 @@
       "run_at": "document_idle"
     }
   ],
-  
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Transform Recipe",
-    "default_icon": {
-      "16": "icons/icon-16.png",
-      "32": "icons/icon-32.png",
-      "48": "icons/icon-48.png",
-      "128": "icons/icon-128.png"
-    }
+    "default_title": "Transform Recipe"
   },
-  
   "options_ui": {
     "page": "options.html",
     "open_in_tab": false
-  },
-  
-  "icons": {
-    "16": "icons/icon-16.png",
-    "32": "icons/icon-32.png",
-    "48": "icons/icon-48.png",
-    "128": "icons/icon-128.png"
   },
   
   "commands": {
@@ -59,7 +41,6 @@
       "description": "Transform recipe on current page"
     }
   },
-  
   "web_accessible_resources": [
     {
       "resources": ["readability.js"],
