chore: MV3 stabilization + diagnostics; archive legacy MV2 under archive/extension-mv2; docs and release notes for v1.0.2

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ extension/*.xpi
 
 # Generated icons (users should generate these)
 extension/icons/*.png
+extension-chrome/icons/*.png
 
 # OS files
 .DS_Store
@@ -33,3 +34,5 @@ npm-debug.log*
 # Temporary files
 *.tmp
 *.temp
+dist/
+*.zip
